# bsl_droid_control

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md
ref/RobStride_Control/cpp/: CMakeLists.txt  README.md
ref/RobStride_Control/rust/: Cargo.toml  README.md
rl_ws/: .gitignore  README.md  check_training_logs.py  debug_v5_rewards.py  pyproject.toml
rl_ws/assets/: README.md  biped_digitigrade.urdf  biped_digitigrade.xml  bsl_droid_simplified.urdf  bsl_droid_simplified_v2.urdf  bsl_droid_simplified_v3.urdf  bsl_droid_simplified_v4.urdf  bsl_droid_simplified_v5.urdf  export_urdf.py  go2_genesis.xml  go2_genesis_intermediate.xml
rl_ws/biped_walking/: __init__.py  biped_eval.py  biped_eval_gamepad.py  biped_eval_headless.py  biped_eval_mujoco.py
rl_ws/biped_walking/envs/: __init__.py  biped_env.py  droid_env.py  droid_env_taskspace.py  droid_env_taskspace_e2e.py  droid_env_taskspace_e2e_v25.py  droid_env_taskspace_e2e_v26.py  droid_env_unitree.py  droid_kinematics.py
rl_ws/biped_walking/train/: biped_train.py  biped_train_v10.py  biped_train_v11.py  biped_train_v12.py  biped_train_v13.py  biped_train_v14.py  biped_train_v15.py  biped_train_v16.py  biped_train_v17.py  biped_train_v18.py  biped_train_v19.py  biped_train_v2.py  biped_train_v20.py  biped_train_v21.py  biped_train_v22.py  biped_train_v3.py  biped_train_v4.py  biped_train_v5.py  biped_train_v6.py  biped_train_v7.py  biped_train_v8.py  biped_train_v9.py  droid_train_narrow_v1.py  droid_train_narrow_v10.py  droid_train_narrow_v11.py  droid_train_narrow_v12.py  droid_train_narrow_v13.py  droid_train_narrow_v14.py  droid_train_narrow_v15.py  droid_train_narrow_v16.py  droid_train_narrow_v17.py  droid_train_narrow_v18.py  droid_train_narrow_v19.py  droid_train_narrow_v2.py  droid_train_narrow_v20.py  droid_train_narrow_v21.py  droid_train_narrow_v22.py  droid_train_narrow_v23.py  droid_train_narrow_v24.py  droid_train_narrow_v25.py  (+94 more)
rl_ws/envs/: __init__.py  biped_env.py  biped_env_v10.py  biped_env_v2.py  biped_env_v4.py  biped_env_v5.py  biped_env_v6.py  biped_env_v7.py  biped_env_v8.py  biped_env_v9.py
rl_ws/logs/: .gitignore
rl_ws/logs/biped-walking/: cfgs.pkl  events.out.tfevents.1769516255.MacBook-Air.local.96613.0
rl_ws/logs/biped-walking-v10/: cfgs.pkl  events.out.tfevents.1769571047.N01361158.14007.0
rl_ws/logs/biped-walking-v11/: cfgs.pkl  events.out.tfevents.1769574278.N01361158.22860.0
rl_ws/logs/biped-walking-v12/: cfgs.pkl  events.out.tfevents.1769576629.N01361158.50053.0
rl_ws/logs/biped-walking-v13/: cfgs.pkl  events.out.tfevents.1769580331.N01361158.70750.0
rl_ws/logs/biped-walking-v14/: cfgs.pkl  events.out.tfevents.1769589510.N01361158.2355.0
rl_ws/logs/biped-walking-v15/: cfgs.pkl  events.out.tfevents.1769590912.N01361158.8964.0
rl_ws/logs/biped-walking-v16/: cfgs.pkl  events.out.tfevents.1769592337.N01361158.14597.0
rl_ws/logs/biped-walking-v17/: cfgs.pkl  events.out.tfevents.1769608855.N01361158.21422.0
rl_ws/logs/biped-walking-v18/: cfgs.pkl  events.out.tfevents.1769617522.N01361158.28923.0
rl_ws/logs/biped-walking-v19/: cfgs.pkl  events.out.tfevents.1769663823.N01361158.48806.0
rl_ws/logs/biped-walking-v2/: cfgs.pkl  events.out.tfevents.1769517967.MacBook-Air.local.74834.0
rl_ws/logs/biped-walking-v20/: cfgs.pkl  events.out.tfevents.1769671526.N01361158.97951.0
rl_ws/logs/biped-walking-v21/: cfgs.pkl  events.out.tfevents.1769678491.N01361158.26374.0
rl_ws/logs/biped-walking-v22/: cfgs.pkl  events.out.tfevents.1769728304.N01361158.56380.0
rl_ws/logs/biped-walking-v3/: cfgs.pkl  events.out.tfevents.1769524741.Mac.66054.0
rl_ws/logs/biped-walking-v4/: cfgs.pkl  events.out.tfevents.1769527590.MacBook-Air.local.95079.0
rl_ws/logs/biped-walking-v5/: cfgs.pkl  events.out.tfevents.1769530797.MacBook-Air.local.33337.0
rl_ws/logs/biped-walking-v6/: cfgs.pkl  events.out.tfevents.1769535257.MacBook-Air.local.52619.0
rl_ws/logs/biped-walking-v7/: cfgs.pkl  events.out.tfevents.1769536581.MacBook-Air.local.12712.0
rl_ws/logs/biped-walking-v8/: cfgs.pkl  events.out.tfevents.1769563493.Mac.56226.0
rl_ws/logs/biped-walking-v9/: cfgs.pkl  events.out.tfevents.1769565422.MacBook-Air.local.41344.0
rl_ws/logs/droid-walking-narrow-v1/: cfgs.pkl  events.out.tfevents.1770531449.N01361158.43802.0
rl_ws/logs/droid-walking-narrow-v10/: cfgs.pkl  events.out.tfevents.1770572439.N01361158.37005.0
rl_ws/logs/droid-walking-narrow-v11/: cfgs.pkl  events.out.tfevents.1770575174.N01361158.39676.0
rl_ws/logs/droid-walking-narrow-v12/: cfgs.pkl  events.out.tfevents.1770605831.N01361158.46062.0
rl_ws/logs/droid-walking-narrow-v13/: cfgs.pkl  events.out.tfevents.1770615248.N01361158.51039.0
rl_ws/logs/droid-walking-narrow-v14/: cfgs.pkl  events.out.tfevents.1770617375.N01361158.52827.0
rl_ws/logs/droid-walking-narrow-v15/: cfgs.pkl  events.out.tfevents.1770621522.N01361158.56975.0
rl_ws/logs/droid-walking-narrow-v16/: cfgs.pkl  events.out.tfevents.1770626578.N01361158.61808.0
rl_ws/logs/droid-walking-narrow-v17/: cfgs.pkl  events.out.tfevents.1770629369.N01361158.65105.0
rl_ws/logs/droid-walking-narrow-v18/: cfgs.pkl  (+1 more)
rl_ws/scripts/: analysis_v24_contact_dynamics.py  analysis_v24_supplementary.py  analyze_contact_chattering.py  analyze_contact_chattering_v2.py  analyze_cross_version_trend.py  analyze_directional_eval.py  analyze_eval_csv.py  analyze_hip_yaw_and_phase.py  analyze_knee_asymmetry_detail.py  analyze_lateral_sway.py  analyze_omni_v4_v3.py  analyze_training_log.py  analyze_vibration.py  analyze_yaw_drift_v2.py  analyze_yaw_drift_v2_deep.py  batch_eval.py  biped_eval.py  biped_eval_headless.py  biped_train.py  biped_train_v10.py  biped_train_v2.py  biped_train_v3.py  biped_train_v4.py  biped_train_v5.py  biped_train_v6.py  biped_train_v7.py  biped_train_v8.py  biped_train_v9.py  check_f710_input.py  check_height.py  compare_models.py  convert_biped_urdf_to_mjcf.py  convert_dae_to_obj.py  convert_urdf_to_mjcf.py  debug_joint_axis.py  debug_v5_rewards.py  extract_eval_summary.py  f710_usb.py  go2_eval_mujoco.py  jitter_analysis_v4_v3.py  (+4 more)
(+527 files in other folders)
